# astx

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc.json  404.html  CNAME  LICENSE  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  git rebase -i HEAd~x  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  test.ipynb
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml  stale.yaml
api/: index.html  index.md
api/SUMMARY/: SUMMARY.md  index.html
api/base/: base.md  index.html
api/blocks/: blocks.md  index.html
api/callables/: callables.md  index.html
api/classes/: index.html
api/context_manager/: index.html
api/datatypes/: datatypes.md  index.html
api/exceptions/: index.html
api/flows/: flows.md  index.html
api/literals/: index.html
api/literals/base/: index.html
api/literals/boolean/: index.html
api/literals/collections/: index.html
api/literals/numeric/: index.html
api/literals/string/: index.html
api/literals/temporal/: index.html
api/mixes/: index.html  mixes.md
api/modifiers/: index.html  modifiers.md
api/operators/: index.html  operators.md
api/references/: index.html
api/subscript/: index.html
api/symbol_table/: index.html  symbol_table.md
api/tools/: index.html  index.md
api/tools/transpilers/: index.html
api/tools/typing/: index.html  typing.md
api/transpilers/: index.html
api/transpilers/python/: index.html
api/types/: index.html  types.md
api/types/base/: index.html
api/types/boolean/: index.html
api/types/casting/: index.html
api/types/collections/: index.html
api/types/numeric/: index.html
api/types/operators/: index.html
api/types/string/: index.html
api/types/temporal/: index.html
api/types/ttypes/: index.html
api/variables/: index.html  variables.md
api/viz/: index.html  viz.md
changelog/: changelog.md  index.html
conda/: dev.yaml  release.yaml
contributing/: contributing.md  index.html
conventions/: index.html
docs/: changelog.md  contributing.md  conventions.md  example.ipynb  gen_ref_nav.py  index.md  installation.md  mkdocs.yaml
docs/api/: references.md  references.rst
docs/tutorials/: ascii_ast_example.ipynb  context.ipynb  debugging.ipynb  dict-comprehension.ipynb  example.ipynb  fibonacci.ipynb  for-loop.ipynb  functions.ipynb  generatorExp.ipynb  get-started.ipynb  literals.ipynb  scope.ipynb  test.ipynb  variables.ipynb
example/: example.ipynb  index.html
installation/: index.html
libs/astx/: .  pyproject.toml
libs/astx-transpilers/: pyproject.toml
libs/astx-transpilers/examples/: complex_program.py  conditional_logic.py  function_example.py
libs/astx-transpilers/src/astx_transpilers/: __init__.py  python_ast.py  python_string.py  python_to_ast.py
libs/astx-transpilers/tests/: test_new_implementation.py  test_python.py  test_python_ast.py  test_python_string.py  test_python_to_ast.py
libs/astx/src/astx/: __init__.py  base.py  callables.py  classes.py  collection_objects.py  comprehensions.py  context_manager.py  data.py  exceptions.py  flows.py  mixes.py  modifiers.py  operators.py  packages.py  subscript.py  symbol_table.py  variables.py  viz.py
libs/astx/src/astx/literals/: __init__.py  base.py  collections.py  numeric.py  string.py  temporal.py
libs/astx/src/astx/tools/: __init__.py  typing.py
libs/astx/src/astx/types/: base.py  boolean.py  casting.py  operators.py  string.py  ttypes.py
libs/astx/tests/: __init__.py  test_base.py  test_blocks.py  test_callables.py  test_classes.py  test_collection_objects.py  test_comprehensions.py  test_context_manager.py  test_exceptions.py  test_flows.py  test_operators.py  test_packages.py  test_readme_usage.py  test_subscript.py  test_variables.py  test_viz.py
libs/astx/tests/datatypes/: __init__.py  test_boolean.py  test_char_string.py  test_complex.py  test_date_time.py  test_float.py  test_integer.py  test_operators.py  test_ttypes.py  test_types.py
libs/astx/tests/examples/: test_fibonacci.py
scripts/: build.sh  gen_ref_nav.py  publish.sh
search/: search_index.json
src/: Untitled.ipynb
src/arxast/: __init__.py  base.py  blocks.py  callables.py  datatypes.py  modifiers.py  operators.py  statements.py
src/astx/: __init__.py  asciiviz.py  base.py  blocks.py  callables.py  classes.py  context_manager.py  datatypes.py  exceptions.py  flows.py  mixes.py  modifiers.py  operators.py  packages.py  statements.py  subscript.py  symbol_table.py  types.py  variables.py  viz.py
src/astx/literals/: __init__.py  base.py  boolean.py  collection.py  collections.py  numeric.py  string.py  temporal.py
tests/: __init__.py  test_arxast.py  test_base.py  test_binary_operators.py  test_blocks.py  test_callables.py  test_classes.py  test_context_manager.py  test_datatype_Any.py  test_datatype_any.py  test_datatype_char_string.py  test_datatype_complex.py  test_datatype_date_and_time.py  test_datatype_date_time.py  test_datatypes.py  test_datatypes_boolean.py  test_datatypes_complex.py  test_datatypes_float.py  test_datatypes_integer.py  test_datatypes_integer_i32.py  test_exceptions.py  test_flows.py  test_import.py  test_literals.py  test_operators.py  test_packages.py  test_statements.py  test_symbol_table.py  test_types.py  test_variables.py  test_viz.py
tests/datatypes/: test_boolean.py  test_char_string.py  test_collection.py  test_collections.py  test_operators.py  test_ttypes.py  test_types.py
tests/examples/: __init__.py  test_fibonacci.py
tests/tools/: __init__.py  test_typing.py
tests/transpilers/: test_python.py
tutorials/context/: context.ipynb  index.html
tutorials/fibonacci/: fibonacci.ipynb  index.html
tutorials/for-loop/: index.html
tutorials/functions/: functions.ipynb  index.html
tutorials/get-started/: get-started.ipynb  index.html
tutorials/literals/: index.html  literals.ipynb
tutorials/variables/: index.html  variables.ipynb
(+17 files in other folders)
