[project]
name = "astx"
version = "0.19.0"  # semantic-release
description = "ASTx is an agnostic expression structure for AST."
readme = "docs/index.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
requires-python = ">=3.9,<4"
dependencies = [
  "atpublic >= 4.0",
  "graphviz >= 0.20.1",
  "asciinet >= 0.3.1",
  "msgpack >= 1",
  "plum-dispatch >= 2",
  "typeguard >= 4",
  "typing-extensions >=4 ; python_version < '3.9'",
  "eval-type-backport >=0.2 ; python_version < '3.10'",
]


[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
exclude = [
  ".git/*",
  ".env*",
]
packages = [
  {include = "astx", from="src"},
]
include = ["src/astx/py.typed"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.9.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = {version=">=0.24.3", extras=["python"]}
jupyterlab = ">=4.0.5"
makim = "1.19.0"
umlizer = ">=0.1.0"
nbmake = ">=1.4.6"
mkdocs-gen-files = ">=0.5.0"
types-requests = ">=2.31.0.20240406"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "error::RuntimeWarning",
    "error::typeguard.TypeHintWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = ["@abc.abstractmethod"]
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]
fix = true

[tool.ruff.lint]
ignore = [
  "F811",
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
]
ignore_missing_imports = true
