[project]
name = "astx-dev"
version = "0.23.0"  # semantic-release
description = "ASTx is an agnostic expression structure for AST."
readme = "docs/index.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
requires-python = ">=3.9,<4"

[tool.poetry]
exclude = [
  ".git/*",
  ".env*",
]
package-mode = false

[tool.poetry.dependencies]
astx = { path = "libs/astx/", develop = true }
astx-transpilers= { path = "libs/astx-transpilers/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.9.5"
mypy = ">=1.6.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipykernel = ">=6.0.0"
ipython = ">=7.0.0"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = {version=">=0.24.3", extras=["python"]}
jupyterlab = ">=4.0.5"
makim = "1.27.0"
umlizer = ">=0.1.0"
nbmake = ">=1.4.6"
mkdocs-gen-files = ">=0.5.0"
types-requests = ">=2.31.0.20240406"
# note: https://github.com/pypa/virtualenv/issues/2944
virtualenv = "<20.33.0"
pytest-xdist = "^3.8.0"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "libs/astx/tests",
    "libs/astx-transpilers/tests",
]
filterwarnings = [
    "error::RuntimeWarning",
    "error::typeguard.TypeHintWarning",
]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = ["@abc.abstractmethod"]
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]
fix = true

[tool.ruff.lint]
ignore = [
  "F811",
  "PLR0911",  # Too many return statements
  "PLR0912",  # Too many branches
  "PLR0913",
  "PLC0415",  # `import` should be at the top-level of a file
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "PL",  # PL
  "RUF", # Ruff-specific rules
  "I001", # isort
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = [
  "yaml",
]
ignore_missing_imports = true
