[project]
name = "astx-transpilers"
version = "0.21.1"  # semantic-release
description = "ASTx is an agnostic expression structure for AST."
readme = "README.md"
authors = [
  {name = "Ivan Ogasawara", email = "ivan.ogasawara@gmail.com"}
]
license = "BSD 3 Clause"
requires-python = ">=3.9,<4"
dependencies = [
  "atpublic >= 4.0",
  "plum-dispatch >= 2",
  "typeguard >= 4",
  "eval-type-backport >=0.2 ; python_version < '3.10'",
  "astx == 0.21.1",  # semantic-release
]

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
exclude = [
  ".git/*",
  ".env*",
]
packages = [
  {include = "astx_transpilers", from="src"},
]
include = ["src/astx_transpilers/py.typed"]
